<resources>
    <string name="app_name">Sky Capital Car Rental</string>

    <!-- Bottom Nav -->
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>


    <!-- Login  Signup -->
    <string name="log_in_title_1">Welcome to</string>
    <string name="email_hint">name@example.com</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <!-- Header Bar -->
    <string name="sky_capital_rentals_header">Sky Capital Rentals</string>
    <string name="daniel_teo">Daniel Teo • S1042141</string>
    <string name="car_body_type_placeholder">Body Type</string>
    <string name="desc_logout">logout button</string>

    <string name="features">Features</string>
    <string name="desc_cars_for_rent_list">List of cards showing cars for rent</string>
    <string name="desc_car_rental_app_logo">Car Rental App Logo</string>
    <string name="desc_car_image">profile image of a car</string>
    <string name="desc_back">back button</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="deposit">Deposit</string>
    <string name="fuel_policy">Fuel Policy</string>

    <!-- Contact Fragment -->
    <string name="contact_us_content">Have a question or feedback? We would love to hear from you. Our support team is online Monday to Friday, 9:00 AM to 6:00 PM. \n\n Do contact us if you have any questions regarding car rentals.</string>
    <string name="contact_us_header">Contact Us</string>
    <string name="contact_email">skyCapitalCarRental@email.com</string>
    <string name="contact_instagram">"@skyCapitalCarRental"</string>
    <string name="desc_instagram">instagram icon</string>
    <string name="desc_email">email icon</string>
    <string name="desc_phone">phone icon</string>
    <string name="contact_phone_number">+1800 000 1234</string>

    <!-- Search Filter -->
    <string name="filter_chip_auto">Auto</string>
    <string name="filter_chip_manual">Manual</string>
    <string name="filter_chip_transmission">Transmission</string>
    <string name="filter_chip_petrol">Petrol</string>
    <string name="filter_chip_diesel">Diesel</string>
    <string name="filter_chip_electric">Electric</string>
    <string name="filter_chip_hybrid">Hybrid</string>
    <string name="filter_chip_fuel_type">Fuel Type</string>
    <string name="header_filter">Filter</string>
    <string name="filter_button_reset">Reset</string>
    <string name="filter_button_apply">Apply</string>
    <string name="filter_seats">Minimum seats: 1</string>

    <!-- Confirm Rent Dialog -->
    <string name="price_per_day_1">"Price per day (× "</string>
    <string name="hint_search_cars">Search cars</string>
    <string name="confirm_rent_deposit">Deposit</string>
    <string name="confirm_rent_total">Total</string>

    <!-- Car Detail Card -->
    <string name="car_card_default_make_model">Make Model</string>
    <string name="car_card_default_luggage">2</string>
    <string name="car_card_default_seating">5</string>
    <string name="car_card_default_transmission">Auto</string>
    <string name="car_card_default_fuel_type">Petrol</string>
    <string name="car_card_rating">Rating</string>
    <string name="car_card_price_day">S$ Price / Day</string>
    <string name="desc_car_seat_slider">search filter slider for car seats</string>
    <string name="desc_luggage_slider">search filter slider for luggage count</string>
    <string name="desc_price_slider">search filter slider for max car rental price</string>

    <!-- Profile Fragment -->
    <string name="hidden_password">••••••••</string>
    <string name="desc_profile_image">Default profile icon image</string>
    <string name="car_card_default_body_type">Body type</string>
    <string name="my_rented_cars">My Rented Cars</string>
</resources>