<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/desc_car_rental_app_logo"
            app:srcCompat="@drawable/car_logo_main"
            tools:srcCompat="@drawable/car_logo_main">
        </ImageView>

        <TextView
            android:id="@+id/loginPageTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_title_1"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/loginPageTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="32dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:maxWidth="488dp"
            android:hint="@string/email_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:maxWidth="488dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="320dp"
            android:maxWidth="320dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignup"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="320dp"
            android:maxWidth="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up" />
    </LinearLayout>
</ScrollView>